[tool.poetry]
name = "dbt-bigquery-test"
version = "0.1.0"
description = ""
authors = ["Shun Asai <shun.asai@tmkc.co.jp>"]
readme = "README.md"
packages = [{include = "dbt_bigquery_test"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dbt-bigquery = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
